# Google-Gemini-Anime-Suggestions

./: Dockerfile  README.md  pyproject.toml  render-depricated.yaml  render.yaml  start.sh
backend/: main.py  models.py
backend/services/: anilist.py  gemini.py
frontend/: app.py
